// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feed component renders correctly while loading 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#323232",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingTop": 20,
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={true}
      />
    }
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
</View>
`;

exports[`Feed component renders correctly while loading with events 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#323232",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingTop": 20,
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={true}
      />
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Array [
            Object {
              "borderBottomColor": "#696A6B",
              "borderBottomWidth": 0.5,
              "width": 750,
            },
            Object {
              "borderBottomColor": "rgba(255,255,255, 0.5)",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "transparent",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 750,
                "zIndex": 2,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "column",
                  "height": 43,
                  "justifyContent": "space-between",
                  "paddingLeft": 10,
                  "width": 220,
                },
                false,
              ]
            }
          >
            <View
              style={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#7ED321",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "marginBottom": -2,
                      "marginTop": -3,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                Test Name
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 10,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                @
                applicaster
              </Text>
            </View>
            <View
              style={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 12,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                August 4
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 9,
                "top": 9,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "instagram_icon",
                }
              }
              style={
                Array [
                  Object {
                    "height": 30,
                    "width": 30,
                  },
                  Object {
                    "tintColor": undefined,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "height": 590.625,
              "width": 750,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": 590.625,
                  "width": 750,
                },
                undefined,
              ]
            }
          />
          <BVLinearGradient
            colors={
              Array [
                3003121664,
                0,
              ]
            }
            end={undefined}
            locations={null}
            start={undefined}
            style={
              Object {
                "height": 130,
              }
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 14,
                "lineHeight": 18,
                "paddingBottom": 12,
                "paddingHorizontal": 12,
                "paddingTop": 17,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Low. Tarmac T2 , CasCam, SPC LCAs.
          Thanks 
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            @azpinstalls
          </Text>
           for the work, parts, advice and setup.
          
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #brz
          </Text>
           
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #gt86
          </Text>
           
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #ft86
          </Text>
          
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "height": 30,
                "paddingBottom": 10,
                "paddingHorizontal": 7,
              },
              Object {
                "marginLeft": 3,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginRight": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                    "marginRight": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              30
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              Likes
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginRight": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                    "marginRight": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              0
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              Comments
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomColor": "#696A6B",
              "borderBottomWidth": 0.5,
              "width": 750,
            },
            Object {
              "borderBottomColor": "rgba(255,255,255, 0.5)",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "transparent",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 750,
                "zIndex": 2,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "column",
                  "height": 43,
                  "justifyContent": "space-between",
                  "paddingLeft": 10,
                  "width": 220,
                },
                false,
              ]
            }
          >
            <View
              style={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#7ED321",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "marginBottom": -2,
                      "marginTop": -3,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                Test Name
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 10,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                @
                applicaster
              </Text>
            </View>
            <View
              style={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 12,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                August 4
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 9,
                "top": 9,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "instagram_icon",
                }
              }
              style={
                Array [
                  Object {
                    "height": 30,
                    "width": 30,
                  },
                  Object {
                    "tintColor": undefined,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "height": 590.625,
              "width": 750,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": 590.625,
                  "width": 750,
                },
                undefined,
              ]
            }
          />
          <BVLinearGradient
            colors={
              Array [
                3003121664,
                0,
              ]
            }
            end={undefined}
            locations={null}
            start={undefined}
            style={
              Object {
                "height": 130,
              }
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 14,
                "lineHeight": 18,
                "paddingBottom": 12,
                "paddingHorizontal": 12,
                "paddingTop": 17,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Low. Tarmac T2 , CasCam, SPC LCAs.
          Thanks 
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            @azpinstalls
          </Text>
           for the work, parts, advice and setup.
          
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #brz
          </Text>
           
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #gt86
          </Text>
           
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #ft86
          </Text>
          
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "height": 30,
                "paddingBottom": 10,
                "paddingHorizontal": 7,
              },
              Object {
                "marginLeft": 3,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginRight": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                    "marginRight": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              30
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              Likes
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginRight": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                    "marginRight": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              0
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              Comments
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Feed component renders correctly with events 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#323232",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingTop": 20,
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Array [
            Object {
              "borderBottomColor": "#696A6B",
              "borderBottomWidth": 0.5,
              "width": 750,
            },
            Object {
              "borderBottomColor": "rgba(255,255,255, 0.5)",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "transparent",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 750,
                "zIndex": 2,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "column",
                  "height": 43,
                  "justifyContent": "space-between",
                  "paddingLeft": 10,
                  "width": 220,
                },
                false,
              ]
            }
          >
            <View
              style={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#7ED321",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "marginBottom": -2,
                      "marginTop": -3,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                Test Name
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 10,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                @
                applicaster
              </Text>
            </View>
            <View
              style={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 12,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                August 4
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 9,
                "top": 9,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "instagram_icon",
                }
              }
              style={
                Array [
                  Object {
                    "height": 30,
                    "width": 30,
                  },
                  Object {
                    "tintColor": undefined,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "height": 590.625,
              "width": 750,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": 590.625,
                  "width": 750,
                },
                undefined,
              ]
            }
          />
          <BVLinearGradient
            colors={
              Array [
                3003121664,
                0,
              ]
            }
            end={undefined}
            locations={null}
            start={undefined}
            style={
              Object {
                "height": 130,
              }
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 14,
                "lineHeight": 18,
                "paddingBottom": 12,
                "paddingHorizontal": 12,
                "paddingTop": 17,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Low. Tarmac T2 , CasCam, SPC LCAs.
          Thanks 
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            @azpinstalls
          </Text>
           for the work, parts, advice and setup.
          
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #brz
          </Text>
           
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #gt86
          </Text>
           
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #ft86
          </Text>
          
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "height": 30,
                "paddingBottom": 10,
                "paddingHorizontal": 7,
              },
              Object {
                "marginLeft": 3,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginRight": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                    "marginRight": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              30
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              Likes
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginRight": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                    "marginRight": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              0
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              Comments
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomColor": "#696A6B",
              "borderBottomWidth": 0.5,
              "width": 750,
            },
            Object {
              "borderBottomColor": "rgba(255,255,255, 0.5)",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "transparent",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 750,
                "zIndex": 2,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "column",
                  "height": 43,
                  "justifyContent": "space-between",
                  "paddingLeft": 10,
                  "width": 220,
                },
                false,
              ]
            }
          >
            <View
              style={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#7ED321",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "marginBottom": -2,
                      "marginTop": -3,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                Test Name
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 10,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                @
                applicaster
              </Text>
            </View>
            <View
              style={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 12,
                    },
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                August 4
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 9,
                "top": 9,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "instagram_icon",
                }
              }
              style={
                Array [
                  Object {
                    "height": 30,
                    "width": 30,
                  },
                  Object {
                    "tintColor": undefined,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "height": 590.625,
              "width": 750,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": 590.625,
                  "width": 750,
                },
                undefined,
              ]
            }
          />
          <BVLinearGradient
            colors={
              Array [
                3003121664,
                0,
              ]
            }
            end={undefined}
            locations={null}
            start={undefined}
            style={
              Object {
                "height": 130,
              }
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 14,
                "lineHeight": 18,
                "paddingBottom": 12,
                "paddingHorizontal": 12,
                "paddingTop": 17,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Low. Tarmac T2 , CasCam, SPC LCAs.
          Thanks 
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            @azpinstalls
          </Text>
           for the work, parts, advice and setup.
          
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #brz
          </Text>
           
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #gt86
          </Text>
           
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            #ft86
          </Text>
          
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "height": 30,
                "paddingBottom": 10,
                "paddingHorizontal": 7,
              },
              Object {
                "marginLeft": 3,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginRight": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                    "marginRight": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              30
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              Likes
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginRight": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                    "marginRight": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              0
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "color": "rgba(255,255,255, 0.75)",
                  },
                ]
              }
            >
              Comments
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Feed component renders correctly without events 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#323232",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingTop": 20,
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
</View>
`;
